--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2999,6 +2999,39 @@ input, select, textarea {
 			.main .goto-next {
 				display: none;
 			}
+			.slider {
+    				position: relative;
+    				width: 100%;
+    				max-width: 600px;
+    				margin: auto;
+			}
+
+			.slides {
+    				display: flex;
+    				transition: transform 0.5s ease;
+			}
+
+			.slide {
+    				min-width: 100%;
+    				box-sizing: border-box;
+			}
+
+			button {
+    				position: absolute;
+    				top: 50%;
+    				transform: translateY(-50%);
+    				background-color: rgba(255, 255, 255, 0.7);
+    				border: none;
+    				cursor: pointer;
+			}
+
+			.prev {
+    				left: 10px;
+			}
+
+			.next {
+    				right: 10px;
+			}
 
 		/* Header */
 
